--- a/css/style.css
+++ b/css/style.css
@@ -66,22 +66,22 @@ img{
 	height: 300px;
 	border-color: gold;
 }
-@media screen and (min-width: 400px){
+@media screen and (max-width: 500px){
 	img{
 		display: block;
 	}
 }
-@media screen and (min-width: 600px){
+@media screen and (max-width: 600px){
 	img{
 		display: block;
 	}
 }
-@media screen and (min-width: 1000px){
+@media screen and (max-width: 1000px){
 	img{
 		display: inline-block;
 	}
 }
-@media screen and (min-width: 1400px){
+@media screen and (max-width: 1400px){
 	img{
 		display: inline;
 	}
