--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,11 @@ img{
 	display: inline-block;
 	margin-left: 20px;
 	text-align: justify;
-	background-color: #0B8CAF;
+	background-color: #873962;
 	margin-top: 5px;
 	padding: 3px;
 	border: 5px solid;
-	border-color: #90AAEA;
+	border-color: #868739;
 	float: right;
 }
 .sidethree{
@@ -69,9 +69,8 @@ img{
 	border: 5px solid;
 	margin: 5px;
 	padding: 3px;
-	background-color: #873962;
-	border-color: #868739;
-	margin-top:;
+	background-color: #0B8CAF;
+	border-color: #90AAEA;
 }
 .container div{
 	display: inline-block;
@@ -83,6 +82,10 @@ img{
 	border-color: gold;
 }
 
+
+
+
+/* ---------------- media wuery --------------------*/
 
 
 
